--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header"><h1>Kerala:The God's Own Country</h1></div>
-    <hr style="margin-left: 100px; margin-right: 100px;">
+    <hr>
     <div class="body">
         <div class="gen">   
         <img class="odd" src="./tradition.jpg" alt="Kerala Tradition">
@@ -72,6 +72,6 @@
                 </p>
         </div>        
     </div>
-    <div class="copy">&copy; CopyRight@RapuruNitheesh</div>
+    <div class="copy">&copy;AllRightsReserved@RapuruNitheesh</div>
 </body>
 </html>
