--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="header"><h1>Kerala:The God's Own Country</h1></div>
+    <div class="header"><h1>Kerala:The God's Own Country</h1>
+    <p style="text-align:right; padding-right: 100px; color:#003366;"><i>- by Nitheesh</i></p>
+    </div>
     <hr>
     <div class="body">
         <div class="gen">   
@@ -29,26 +31,41 @@
          <div class="gen">
         <img class="even" src="./climate.jpg" alt="Kerala Climate">
             <h2>Climate</h2>
-                <p>The state experiences a tropical monsoon climate.
-                   Kerala receives heavy rainfall during the monsoon 
-                   season from June to September. The winters, from 
-                   November to February, are cool and pleasant, making 
-                   it an ideal time for tourism. Summers, from March 
-                   to May, are warm but bearable due to the abundant 
-                   greenery.</p>
+                <p>Kerala, located in the southern part of India,
+                 is renowned for its tropical monsoon climate, which 
+                 is heavily influenced by its proximity to the 
+                 Arabian Sea and the Western Ghats. The state 
+                 experiences warm and humid weather throughout 
+                 the year, with lush <i >greenery and vibrant ecosystems</i>
+                 thriving under its consistent climate.The year in 
+                 Kerala is marked by four distinct seasons. Summers,
+                from March to May, are relatively hot and humid,
+                 with temperatures ranging between 28°C and 38°C. 
+                This season also witnesses pre-monsoon showers,
+                 locally known as <i >"Mango showers"</i> which provide
+                  some relief from the heat.Kerala receives heavy and sustained rainfall
+                 during this period, turning the state into a verdant
+                  paradise and revitalizing its rivers and backwaters.</p>
         </div>
         <div class="gen">           
         <img class="odd" src="./tourism.jpg" alt="Kerala Tourism">
             <h2>Tourism</h2>
                 <p>
-                Kerala is a top destination for travelers seeking
-                 natural beauty and tranquility. Its backwaters 
-                 offer houseboat experiences, while hill stations
-                like<i>" Munnar"</i> provide breathtaking views of tea
-                plantations. Wildlife enthusiasts can visit                     sanctuaries like Silent Valley and Periyar, 
-                and beach lovers can relax on the shores of 
-                Kovalam and Varkala. <i>"Ayurveda and wellness tourism"</i>
-                 also draw international visitors.
+                One of the highlights of Kerala’s tourism is its
+                 stunning natural beauty. The backwaters, particularly
+                 in <i>"Alleppey"</i> (Alappuzha) and <i >"Kumarakom"</i>, offer a 
+                 unique experience with houseboat cruises through
+                tranquil lagoons and canals surrounded by swaying 
+                palms. The state’s hill stations, such as <i >"Munnar,
+                Wayanad, and Thekkady"</i>, are adorned with misty 
+                mountains, tea plantations, and cascading waterfalls.
+                For beach lovers, Kerala boasts pristine stretches 
+                of sand like Kovalam, Varkala, and Marari, each offering
+                 a mix of relaxation and adventure. Wildlife enthusiasts
+                can explore sanctuaries like <i >"Periyar and Wayanad"</i>, 
+                which are home to exotic flora and fauna.Kerala’s 
+                unique blend of natural splendor, cultural richness,
+                 and wellness opportunities make it a must-visit destination. 
                 </p>
         </div>
         <div class="gen">           
