--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header"><h1>Kerala:The God's Own Country</h1>
-    <p style="text-align:right; padding-right: 100px; color:#003366;"><i>- by Nitheesh</i></p>
+    <p class="part"><i>- by Nitheesh</i></p>
     </div>
     <hr>
     <div class="body">
@@ -25,7 +25,13 @@
                 with grandeur, reflecting the unity and vibrancy of 
                 its people. The cuisine is equally diverse, with dishes
                  like appam, fish curry, and payasam showcasing the use 
-                of coconut, spices, and fresh local ingredients.
+                of coconut, spices, and fresh local ingredients.The state
+                 is also known as the cradle of Ayurveda, offering
+                traditional healing practices and therapies that are
+                an integral part of its culture. Handloom textiles,
+                metal crafts, and the iconic Kasavu sarees further highlight
+                 Kerala's artistic craftsmanship.Kerala embodies a rich cultural
+                 legacy that continues to thrive in modern times.
                 </p>
          </div>
          <div class="gen">
